# claudecode-stausline

./: Cargo.toml  README.md  install.sh  setup.ps1
.github/workflows/: release.yml
src/: main.rs  providers.rs
