[package]
name = "claudecode-statusline"
version = "0.1.0"
edition = "2021"
description = "A Rust-based statusline plugin for Claude Code"
authors = ["zzfn"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "z"
lto = true
strip = true
