[package]
name = "cc-statusline"
version = "0.2.4"
edition = "2021"
description = "A Rust-based statusline plugin for Claude Code"
authors = ["zzfn"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "blocking", "rustls-tls"] }
tokio = { version = "1.0", features = ["rt", "time"] }
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = "z"
lto = true
strip = true
